--- a/index.html
+++ b/index.html
@@ -88,7 +88,9 @@
 
 
     <section id="About"
-        class="relative w-full min-h-screen flex items-center justify-center bg-black text-white overflow-hidden">
+        class="relative w-full min-h-screen flex items-center justify-center bg-black text-white overflow-hidden pt-8
+         md:pt-0">
+
         <!-- Background with Zoom Animation -->
         <div class="absolute inset-0 overflow-hidden">
             <img src="/static/media/slide-2.91a9c47f.jpg" alt="Background"
@@ -132,11 +134,10 @@
             <div class="w-full md:w-1/2 flex justify-center md:justify-end animate-slide-top">
                 <div
                     class="relative w-72 h-72 sm:w-80 sm:h-80 md:w-[400px] md:h-[400px] rounded-3xl overflow-hidden shadow-2xl border border-white/10 transform hover:scale-105 transition-transform duration-[2000ms] ease-out">
-                    <img src="images/Abaid-img.png.jpeg" alt="Abaid"
+                    <img src="images/Portfolio-img.jpeg" alt="Abaid"
                         class="w-full h-full object-cover scale-110 hover:scale-125 transition-transform duration-[4000ms] ease-out" />
                     <div
                         class="absolute inset-0 bg-gradient-to-t from-black/40 to-transparent opacity-0 hover:opacity-100 transition-opacity duration-700 flex items-end justify-center text-lg font-semibold pb-6">
-                        Abaid Jutt ✨
                     </div>
                 </div>
             </div>
@@ -245,7 +246,24 @@
             <div id="gallery" class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-8 transition-all duration-500">
 
                 <!-- Web Design -->
+              
+
+                <!-- Print Design -->
                 <div
+                    class="portfolio-item Print-Design bg-gray-800 border border-gray-700 rounded-2xl overflow-hidden transform hover:scale-105 transition duration-500">
+                    <img src="images/Weather-app.jpg" alt="Print Design 1"
+                        class="w-full h-72 object-cover transition-transform duration-700 hover:scale-110">
+                    <div class="p-6">
+                        <h3 class="text-xl font-semibold mb-2">Weather App</h3>
+                        <p class="text-gray-400 mb-4">Eye-catching print designs crafted for marketing materials.</p>
+                        <a href="https://weather-app-alpha-black-23.vercel.app/" target="_blank"
+                            class="inline-block px-6 py-2 bg-cyan-500 rounded-full text-white font-semibold hover:bg-cyan-600 transition">Live
+                            Preview</a>
+                    </div>
+                </div>
+
+
+                  <div
                     class="portfolio-item Web-Design bg-gray-800 border border-gray-700 rounded-2xl overflow-hidden transform hover:scale-105 transition duration-500">
                     <img src="images/fruitable-web.png" alt="Web Design 1"
                         class="w-full h-72 object-cover transition-transform duration-700 hover:scale-110">
@@ -253,39 +271,14 @@
                         <h3 class="text-xl font-semibold mb-2">Fruitable</h3>
                         <p class="text-gray-400 mb-4">Creative and responsive web design for businesses and portfolios.
                         </p>
-                        <a href="https://example.com" target="_blank"
-                            class="inline-block px-6 py-2 bg-cyan-500 rounded-full text-white font-semibold hover:bg-cyan-600 transition">Live
-                            Preview</a>
-                    </div>
-                </div>
-
-                <!-- Print Design -->
-                <div
-                    class="portfolio-item Print-Design bg-gray-800 border border-gray-700 rounded-2xl overflow-hidden transform hover:scale-105 transition duration-500">
-                    <img src="images/Soilboy-web.png" alt="Print Design 1"
-                        class="w-full h-72 object-cover transition-transform duration-700 hover:scale-110">
-                    <div class="p-6">
-                        <h3 class="text-xl font-semibold mb-2">Soilboy</h3>
-                        <p class="text-gray-400 mb-4">Eye-catching print designs crafted for marketing materials.</p>
-                        <a href="https://example.com" target="_blank"
+                        <a href="https://fruitables-website-f74dd4.netlify.app/" target="_blank"
                             class="inline-block px-6 py-2 bg-cyan-500 rounded-full text-white font-semibold hover:bg-cyan-600 transition">Live
                             Preview</a>
                     </div>
                 </div>
 
                 <!-- Web Application -->
-                <div
-                    class="portfolio-item Web-Application bg-gray-800 border border-gray-700 rounded-2xl overflow-hidden transform hover:scale-105 transition duration-500">
-                    <img src="images/amazon-web.png" alt="Web Application"
-                        class="w-full h-72 object-cover transition-transform duration-700 hover:scale-110">
-                    <div class="p-6">
-                        <h3 class="text-xl font-semibold mb-2">Amazon</h3>
-                        <p class="text-gray-400 mb-4">Dynamic and user-friendly web apps built for performance.</p>
-                        <a href="https://example.com" target="_blank"
-                            class="inline-block px-6 py-2 bg-cyan-500 rounded-full text-white font-semibold hover:bg-cyan-600 transition">Live
-                            Preview</a>
-                    </div>
-                </div>
+               
 
                 <!-- Photography -->
                 <div
@@ -295,7 +288,21 @@
                     <div class="p-6">
                         <h3 class="text-xl font-semibold mb-2">Netflix</h3>
                         <p class="text-gray-400 mb-4">Professional photography capturing emotions and moments.</p>
-                        <a href="https://example.com" target="_blank"
+                        <a href="https://netflix-clone-website-ecru.vercel.app/" target="_blank"
+                            class="inline-block px-6 py-2 bg-cyan-500 rounded-full text-white font-semibold hover:bg-cyan-600 transition">Live
+                            Preview</a>
+                    </div>
+                </div>
+
+
+                 <div
+                    class="portfolio-item Web-Application bg-gray-800 border border-gray-700 rounded-2xl overflow-hidden transform hover:scale-105 transition duration-500">
+                    <img src="images/amazon-web.png" alt="Web Application"
+                        class="w-full h-72 object-cover transition-transform duration-700 hover:scale-110">
+                    <div class="p-6">
+                        <h3 class="text-xl font-semibold mb-2">Amazon</h3>
+                        <p class="text-gray-400 mb-4">Dynamic and user-friendly web apps built for performance.</p>
+                        <a href="https://amazone-clone-orpin.vercel.app/" target="_blank"
                             class="inline-block px-6 py-2 bg-cyan-500 rounded-full text-white font-semibold hover:bg-cyan-600 transition">Live
                             Preview</a>
                     </div>
@@ -304,10 +311,10 @@
                 <!-- Print Design 2 -->
                 <div
                     class="portfolio-item Print-Design bg-gray-800 border border-gray-700 rounded-2xl overflow-hidden transform hover:scale-105 transition duration-500">
-                    <img src="images/gym-web.png" alt="Print Design 2"
+                    <img src="images/Soilboy-web.png" alt="Print Design 2"
                         class="w-full h-72 object-cover transition-transform duration-700 hover:scale-110">
                     <div class="p-6">
-                        <h3 class="text-xl font-semibold mb-2">Gym-Web</h3>
+                        <h3 class="text-xl font-semibold mb-2">Soilboy</h3>
                         <p class="text-gray-400 mb-4">Stylish brochures, business cards, and posters.</p>
                         <a href="https://example.com" target="_blank"
                             class="inline-block px-6 py-2 bg-cyan-500 rounded-full text-white font-semibold hover:bg-cyan-600 transition">Live
@@ -318,10 +325,10 @@
                 <!-- Web Design 2 -->
                 <div
                     class="portfolio-item Web-Design bg-gray-800 border border-gray-700 rounded-2xl overflow-hidden transform hover:scale-105 transition duration-500">
-                    <img src="images/Housing-web.png" alt="Web Design 2"
+                    <img src="images/gym-web.png" alt="Web Design 2"
                         class="w-full h-72 object-cover transition-transform duration-700 hover:scale-110">
                     <div class="p-6">
-                        <h3 class="text-xl font-semibold mb-2">Housing</h3>
+                        <h3 class="text-xl font-semibold mb-2">Gym-Web</h3>
                         <p class="text-gray-400 mb-4">Modern and responsive website layouts for startups.</p>
                         <a href="https://example.com" target="_blank"
                             class="inline-block px-6 py-2 bg-cyan-500 rounded-full text-white font-semibold hover:bg-cyan-600 transition">Live
