--- a/index.html
+++ b/index.html
@@ -88,8 +88,7 @@
 
 
     <section id="About"
-        class="relative w-full min-h-screen flex items-center justify-center bg-black text-white overflow-hidden pt-8
-         md:pt-0">
+        class="relative w-full min-h-screen flex items-center justify-center bg-black text-white overflow-hidden">
 
         <!-- Background with Zoom Animation -->
         <div class="absolute inset-0 overflow-hidden">
@@ -105,7 +104,7 @@
 
         <!-- Content -->
         <div
-            class="relative z-10 container w-[85%] mx-auto  flex flex-col md:flex-row items-center justify-between gap-12">
+            class="relative z-10 container w-[85%] mx-auto  flex flex-col md:flex-row items-center justify-between gap-12 py-8">
             <!-- Left Text -->
             <div class="w-full md:w-2/3 text-center md:text-left space-y-6 animate-slide-left ">
                 <h4 class="text-cyan-500 font-semibold tracking-widest uppercase">
