--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
 
     <!-- Header -->
-    <header class="w-full bg-black text-white fixed top-0 left-0 shadow-lg z-50">
+    <header class="w-full bg-black text-white fixed  top-0 left-0 shadow-lg z-50">
         <div class="container w-[85%]  mx-auto  py-2 flex justify-between items-center">
 
             <!-- Logo -->
@@ -104,7 +104,8 @@
 
         <!-- Content -->
         <div
-            class="relative z-10 container w-[85%] mx-auto  flex flex-col md:flex-row items-center justify-between gap-12 py-8">
+            class="relative z-10 container w-[85%] mx-auto  flex flex-col md:flex-row items-center justify-between gap-12
+            py-20 ">
             <!-- Left Text -->
             <div class="w-full md:w-2/3 text-center md:text-left space-y-6 animate-slide-left ">
                 <h4 class="text-cyan-500 font-semibold tracking-widest uppercase">
