--- a/index.html
+++ b/index.html
@@ -249,18 +249,7 @@
               
 
                 <!-- Print Design -->
-                <div
-                    class="portfolio-item Print-Design bg-gray-800 border border-gray-700 rounded-2xl overflow-hidden transform hover:scale-105 transition duration-500">
-                    <img src="images/Weather-app.jpg" alt="Print Design 1"
-                        class="w-full h-72 object-cover transition-transform duration-700 hover:scale-110">
-                    <div class="p-6">
-                        <h3 class="text-xl font-semibold mb-2">Weather App</h3>
-                        <p class="text-gray-400 mb-4">Eye-catching print designs crafted for marketing materials.</p>
-                        <a href="https://weather-app-alpha-black-23.vercel.app/" target="_blank"
-                            class="inline-block px-6 py-2 bg-cyan-500 rounded-full text-white font-semibold hover:bg-cyan-600 transition">Live
-                            Preview</a>
-                    </div>
-                </div>
+              
 
 
                   <div
@@ -330,6 +319,21 @@
                     <div class="p-6">
                         <h3 class="text-xl font-semibold mb-2">Gym-Web</h3>
                         <p class="text-gray-400 mb-4">Modern and responsive website layouts for startups.</p>
+                        <a href="https://example.com" target="_blank"
+                            class="inline-block px-6 py-2 bg-cyan-500 rounded-full text-white font-semibold hover:bg-cyan-600 transition">Live
+                            Preview</a>
+                    </div>
+                </div>
+
+
+
+                  <div
+                    class="portfolio-item Print-Design bg-gray-800 border border-gray-700 rounded-2xl overflow-hidden transform hover:scale-105 transition duration-500">
+                    <img src="images/Housing-web.png" alt="Print Design 1"
+                        class="w-full h-72 object-cover transition-transform duration-700 hover:scale-110">
+                    <div class="p-6">
+                        <h3 class="text-xl font-semibold mb-2">Housing</h3>
+                        <p class="text-gray-400 mb-4">Eye-catching print designs crafted for marketing materials.</p>
                         <a href="https://example.com" target="_blank"
                             class="inline-block px-6 py-2 bg-cyan-500 rounded-full text-white font-semibold hover:bg-cyan-600 transition">Live
                             Preview</a>
