Added new images and updated code

--- a/index.html
+++ b/index.html
@@ -380,7 +380,7 @@
                     <div
                         class="flex flex-col items-center bg-white shadow-md rounded-xl p-4 hover:shadow-lg hover:-translate-y-1 transition-all duration-300">
                         <div class="p-3 bg-gray-100 rounded-xl">
-                            <img src="https://img.icons8.com/color/96/html-5--v1.png" class="w-12 h-12" />
+                            <img src="images/HTML5_Logo_512.png" class="w-12 h-12" />
                         </div>
                         <p class="font-semibold mt-2 text-black">HTML5</p>
                     </div>
@@ -388,7 +388,7 @@
                     <div
                         class="flex flex-col items-center bg-white shadow-md rounded-xl p-4 hover:shadow-lg hover:-translate-y-1 transition-all duration-300">
                         <div class="p-3 bg-gray-100 rounded-xl">
-                            <img src="https://img.icons8.com/color/96/css3.png" class="w-12 h-12" />
+                            <img src="images/CSS3_logo.svg.png" class="w-12 h-12" />
                         </div>
                         <p class="font-semibold mt-2 text-black">CSS3</p>
                     </div>
@@ -396,7 +396,7 @@
                     <div
                         class="flex flex-col items-center bg-white shadow-md rounded-xl p-4 hover:shadow-lg hover:-translate-y-1 transition-all duration-300">
                         <div class="p-3 bg-gray-100 rounded-xl">
-                            <img src="https://img.icons8.com/color/96/tailwind_css.png" class="w-12 h-12" />
+                            <img src="images/Tailwind_CSS_Logo.svg.png" class="w-12 h-12" />
                         </div>
                         <p class="font-semibold mt-2 text-black">Tailwind CSS</p>
                     </div>
@@ -404,7 +404,7 @@
                     <div
                         class="flex flex-col items-center bg-white shadow-md rounded-xl p-4 hover:shadow-lg hover:-translate-y-1 transition-all duration-300">
                         <div class="p-3 bg-gray-100 rounded-xl">
-                            <img src="https://img.icons8.com/color/96/javascript--v1.png" class="w-12 h-12" />
+                            <img src="images/javascript.png" class="w-12 h-12" />
                         </div>
                         <p class="font-semibold mt-2 text-black">JavaScript</p>
                     </div>
@@ -412,7 +412,7 @@
                     <div
                         class="flex flex-col items-center bg-white shadow-md rounded-xl p-4 hover:shadow-lg hover:-translate-y-1 transition-all duration-300">
                         <div class="p-3 bg-gray-100 rounded-xl">
-                            <img src="https://img.icons8.com/color/96/react-native.png" class="w-12 h-12" />
+                            <img src="images/React.svg" class="w-12 h-12" />
                         </div>
                         <p class="font-semibold mt-2 text-black">React.js</p>
                     </div>
@@ -422,7 +422,7 @@
                     <div
                         class="flex flex-col items-center bg-white shadow-md rounded-xl p-4 hover:shadow-lg hover:-translate-y-1 transition-all duration-300">
                         <div class="p-3 bg-gray-100 rounded-xl">
-                            <img src="https://cdn-icons-png.flaticon.com/512/5968/5968705.png" class="w-12 h-12" />
+                            <img src="images/Figma-logo.svg.png" class="w-12 h-12" />
                         </div>
                         <p class="font-semibold mt-2 text-black">Figma</p>
                     </div>
@@ -431,7 +431,7 @@
                     <div
                         class="flex flex-col items-center bg-white shadow-md rounded-xl p-4 hover:shadow-lg hover:-translate-y-1 transition-all duration-300">
                         <div class="p-3 bg-gray-100 rounded-xl">
-                            <img src="https://img.icons8.com/color/96/visual-studio-code-2019.png" class="w-12 h-12" />
+                            <img src="images/Visual_Studio_Code_1.35_icon.svg.webp" class="w-12 h-12" />
                         </div>
                         <p class="font-semibold mt-2 text-black">VS Code</p>
                     </div>
@@ -440,7 +440,7 @@
                     <div
                         class="flex flex-col items-center bg-white shadow-md rounded-xl p-4 hover:shadow-lg hover:-translate-y-1 transition-all duration-300">
                         <div class="p-3 bg-gray-100 rounded-xl">
-                            <img src="https://img.icons8.com/ios-glyphs/90/github.png" class="w-12 h-12" />
+                            <img src="images/GitHub-Mark-ea2971cee799.png" class="w-12 h-12" />
                         </div>
                         <p class="font-semibold mt-2 text-black">GitHub</p>
                     </div>
@@ -449,7 +449,7 @@
                     <div
                         class="flex flex-col items-center bg-white shadow-md rounded-xl p-4 hover:shadow-lg hover:-translate-y-1 transition-all duration-300">
                         <div class="p-3 bg-gray-100 rounded-xl">
-                            <img src="https://i.postimg.cc/zfznBXJh/547d4e20-dd7e-11ee-b074-b5c8fe3ef189-netlify-light-removebg-preview.png"
+                            <img src="images/Netlify.png"
                                 class="w-12 h-12" />
                         </div>
                         <p class="font-semibold mt-2 text-black">Netlify</p>
@@ -459,7 +459,7 @@
                     <div
                         class="flex flex-col items-center bg-white shadow-md rounded-xl p-4 hover:shadow-lg hover:-translate-y-1 transition-all duration-300">
                         <div class="p-3 bg-gray-100 rounded-xl">
-                            <img src="https://cdn.worldvectorlogo.com/logos/vercel.svg" class="w-12 h-12" />
+                            <img src="images/vercel-ltjv9ugkhzcj1yk16y59an.webp" class="w-12 h-12" />
                         </div>
                         <p class="font-semibold mt-2 text-black">Vercel</p>
                     </div>
